fixes on mobile view

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -47,4 +47,5 @@ h3, p {
 
 form {
   text-align: center;
+  max-width: 80vw;
 }
